# Guelderose

./: Cargo.toml  README.md  README.ru.md  config.yaml
docker/: docker-compose.yml
src/: main.rs
src/daemon/: mod.rs  outbox_daemon.rs
src/kafka/: kafka_consumer.rs  kafka_producer.rs  mod.rs
src/models/: input_message.rs  mod.rs
src/setting/: settings.rs
src/storage/: mod.rs  redis_queue.rs  s3_storage.rs
src/utils/: secret.rs
