[package]
name = "guelderose"
version = "0.1.0"
authors = ["Artem Sergeev"]
edition = "2024"
publish = false

[dependencies]
log = "0.4.27"
anyhow = "1.0.99"
config = "0.15.14"
rdkafka = "0.38.0"
env_logger = "0.11.8"
serde_json = "1.0.143"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
redis = { version = "0.32.5", features = ["tokio-comp", "aio"] }
futures = "0.3.31"
